@@ -1,3 +1,8 @@
+Jun 1, 2007
+
+ * FIXED: Use new predicate_indicator frame attribute for safe error
+   handling.
+
 May 23, 2007
 
  * FIXED: Preserve extra request-headers over redirect.  Yves Raimond.
